/*
 * Copyright (C) 2019-2021 FratikB0T Contributors
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id'java'
    id'application'
    id'com.github.johnrengelman.shadow' version '7.1.2' apply false
    id "io.freefair.lombok" version "6.5.0.3" apply false
}

group 'pl.fratik'

allprojects {
    apply plugin: 'com.github.johnrengelman.shadow'
    apply plugin: 'io.freefair.lombok'
    repositories {
        mavenCentral()
        jcenter()
        maven { url "https://plugins.gradle.org/m2/" }
        maven { url 'https://jitpack.io' }
        maven { url 'https://m2.dv8tion.net/releases' }
    }
    sourceCompatibility = 11
    targetCompatibility = 11

    compileJava {
        options.encoding = 'UTF-8'
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'application'

    group = 'pl.fratik'
    sourceCompatibility = 11
    targetCompatibility = 11

    processResources {
        evaluationDependsOn(":core")

        from('src/main/resources') {
            include '**/*.json'
            filter ReplaceTokens, tokens: [
                "version": version,
                "core.version": project(":core").version
            ]
            duplicatesStrategy DuplicatesStrategy.EXCLUDE
        }

        from('src/main/resources') {
            exclude '**/*.json'
            duplicatesStrategy DuplicatesStrategy.EXCLUDE
        }
        outputs.upToDateWhen { false }
    }

    compileJava {
        options.compilerArgs << '-parameters'
        options.encoding = 'UTF-8'
    }
}

build.dependsOn jar

compileJava {
    options.compilerArgs << '-parameters'
}

artifacts {
    archives shadowJar
}

compileJava.options.encoding = 'UTF-8'
